# rdbcli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
rusty_db_cli/: Cargo.toml  rustfmt.toml
rusty_db_cli/src/: application.rs  lib.rs  main.rs
rusty_db_cli/src/connectors/: base.rs  mod.rs
rusty_db_cli/src/connectors/mongodb/: connector.rs  interpreter.rs  mod.rs  parser.rs
rusty_db_cli/src/connectors/postgresql/: connector.rs
rusty_db_cli/src/managers/: auth_manager.rs  event_manager.rs  mod.rs  resource_manager.rs  window_manager.rs
rusty_db_cli/src/systems/: event_system.rs  mod.rs
rusty_db_cli/src/ui/: layouts.rs  window.rs
rusty_db_cli/src/ui/components/: base.rs  command.rs  connection_list.rs  input.rs  mod.rs  paragraph.rs  scrollable_table.rs  status_line.rs
rusty_db_cli/src/utils/: external_editor.rs  fuzzy.rs  mod.rs
rusty_db_cli/src/widgets/: input.rs  mod.rs  scrollable_table.rs  throbber.rs
rusty_db_cli_derive_internals/: Cargo.toml
rusty_db_cli_derive_internals/src/: lib.rs
rusty_db_cli_lsp/: Cargo.toml
rusty_db_cli_lsp/src/: main.rs
rusty_db_cli_mongo/: Cargo.toml  query.mongo
rusty_db_cli_mongo/src/: interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  standard_library.rs
rusty_db_cli_mongo/src/types/: errors.rs  expressions.rs  literals.rs  mod.rs
src/: application.rs  lib.rs  main.rs  types.rs
src/connectors/: base.rs  mod.rs
src/connectors/mongodb/: connector.rs  mod.rs  parser.rs
src/managers/: auth_manager.rs  connection_manager.rs  mod.rs  window_manager.rs
src/systems/: event_system.rs
src/ui/: layouts.rs  mod.rs  window.rs
src/ui/components/: command.rs  connection.rs  connection_list.rs  input.rs  login.rs  mod.rs  paragraph.rs  scrollable_table.rs
src/utils/: external_editor.rs
src/widgets/: scrollable_table.rs
