[package]
name = "rusty-db-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = "0.4.31"
crossterm = "0.26.1"
futures = "0.3.28"
home = "0.5.9"
humantime = "2.1.0"
mongodb = "2.6.0"
once_cell = "1.19.0"
openssl = "0.10.61"
pam-client = "0.5.0"
ratatui = "0.25.0"
rcgen = "0.12.0"
regex = "1.10.2"
serde = "1.0.178"
serde_json = "1.0.104"
tempfile = "3.8.1"
tokio = "1.29.1"
tokio-stream = "0.1.14"
whoami = "1.4.1"
