[package]
name = "rusty-db-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = "0.4.31"
crossterm = "0.26.1"
mongodb = "2.6.0"
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = "0.25.0"
regex = "1.10.2"
serde = "1.0.178"
serde_json = "1.0.104"
tempfile = "3.8.1"
tokio = "1.29.1"
tokio-stream = "0.1.14"
rusty_db_cli_mongo = { path = "../rusty_db_cli_mongo" }
rusty_db_cli_derive_internals = { path = "../rusty_db_cli_derive_internals" }
home = "0.5.9"
clap = { version = "4.5.0", features = ["derive"] }
