[package]
name = "rusty_db_cli_derive_internals"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
regex = "1.10.3"
syn = "2.0.48"

[lib]
proc-macro = true
