[package]
name = "rusty_db_cli_lsp"
version = "0.1.0"
edition = "2021"

[library]
path = "src/main.rs"         # Path to your library's main source file
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = "1.0.197"
serde_json = "1.0.114"
rusty_db_cli_mongo = { path = "../rusty_db_cli_mongo" }
home = "0.5.9"
