[package]
name = "rusty_db_cli_mongo"
version = "0.1.0"
edition = "2021"

[library]
path = "src/main.rs"         # Path to your library's main source file
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
rusty_db_cli_derive_internals = { path = "../rusty_db_cli_derive_internals" }
