[package]
name = "rusty_db_cli_mongo"
version = "0.1.0"
edition = "2021"

[library]
path = "src/main.rs"         # Path to your library's main source file
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.9.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.33", features = ["serde"] }
dyn-clone = "1.0.16"
rusty_db_cli_derive_internals = { path = "../rusty_db_cli_derive_internals" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
